tests/neg/missing-implicit3.check
-- [E172] Type Error: tests/neg/missing-implicit3.scala:13:36 ----------------------------------------------------------
13 |val sortedFoos = sort(List(new Foo)) // error
   |                                    ^
   |     No given instance of type ord.Ord[ord.Foo] was found for a context parameter of method sort in package ord.
   |     I found:
   |
   |         ord.Ord.ordered[ord.Foo](/* missing */summon[ord.Foo => Comparable[? >: ord.Foo]])
   |
   |     But no implicit values were found that match type ord.Foo => Comparable[? >: ord.Foo].
   |
   |     The following import might make progress towards fixing the problem:
   |
   |       import scala.math.Ordered.orderingToOrdered
   |
